tests/error/type_match/base_case_null_incomplete_type.bz
function test()
{
	let _: ?auto = null;
}
